--- a/package.json
+++ b/package.json
@@ -21,7 +21,16 @@
     "start": "react-scripts start",
     "build": "INLINE_RUNTIME_CHUNK=false craco build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "watch": "npm-watch " 
+  },  
+  "watch": {
+    "build": {
+      "patterns": [
+        "src"
+      ],
+      "extensions": "ts,tsx"
+    }
   },
   "eslintConfig": {
     "extends": [
@@ -42,6 +51,7 @@
     ]
   },
   "devDependencies": {
-    "@types/chrome": "^0.0.151"
+    "@types/chrome": "^0.0.151",
+    "npm-watch": "^0.11.0"
   }
 }
