--- a/package.json
+++ b/package.json
@@ -3,6 +3,8 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@chakra-ui/icons": "^1.1.1",
+    "@chakra-ui/menu": "^1.8.1",
     "@chakra-ui/react": "^1.7.2",
     "@craco/craco": "^6.2.0",
     "@emotion/react": "^11.7.0",
