--- a/package.json
+++ b/package.json
@@ -17,8 +17,10 @@
     "@types/react": "^17.0.15",
     "@types/react-dom": "^17.0.9",
     "framer-motion": "^4.1.17",
+    "jsdom": "^19.0.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-router": "^6.0.2",
     "react-scripts": "4.0.3",
     "typescript": "^4.3.5",
     "web-vitals": "^1.1.2"
