--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "jsdom": "^19.0.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-form-stepper": "^1.4.3",
     "react-router": "^6.0.2",
     "react-scripts": "4.0.3",
     "typescript": "^4.3.5",
