--- a/package.json
+++ b/package.json
@@ -16,14 +16,19 @@
     "@types/node": "^12.20.18",
     "@types/react": "^17.0.15",
     "@types/react-dom": "^17.0.9",
+    "firebase": "8.0.0",
     "framer-motion": "^4.1.17",
+    "history": "^5.1.0",
     "jsdom": "^19.0.0",
+    "object-hash": "^2.2.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-form-stepper": "^1.4.3",
     "react-router": "^6.0.2",
+    "react-router-dom": "^6.1.1",
     "react-scripts": "4.0.3",
     "typescript": "^4.3.5",
+    "uuid": "^8.3.2",
     "web-vitals": "^1.1.2"
   },
   "scripts": {
